# EH_MCP

./: .env.example  .gitignore  .mcpbignore  README.md  kpi_config.example.yaml  manifest.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
callback-page/: index.html
docs/: ALLOWLIST.md  INSTALL.md  KPI_ROADMAP.md
scripts/: authorize.py
src/eh_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  dates.py  errors.py  kpi.py  kpi_config.py  models.py  oauth_flow.py  schema.py  server.py
tests/: test_allowlist.py  test_auth.py  test_client.py  test_connect.py  test_errors.py  test_kpi.py  test_kpi_config.py  test_oauth_flow.py  test_schema.py
